# label_master

./: .coverage  AGENTS.md  Makefile  README.md  pyproject.toml
artifacts/: simple_field_tree_drone.blend
docs/: bbox-annotation-converter-design-spec.md  review-quality-gates.md
reports/: convert-004dab05524e.config.json  convert-004dab05524e.report.json  convert-0155a02dfa1b.config.json  convert-0155a02dfa1b.report.json  convert-023232179eb5.config.json  convert-023232179eb5.report.json  convert-025f2f54b4f6.config.json  convert-025f2f54b4f6.report.json  convert-035c43d55905.config.json  convert-035c43d55905.report.json  convert-038451c4734d.config.json  convert-038451c4734d.report.json  convert-05cf98258075.config.json  convert-05cf98258075.report.json  convert-06a0682ec789.config.json  convert-06a0682ec789.report.json  convert-07f8790e6251.config.json  convert-07f8790e6251.report.json  convert-084aa3705015.config.json  convert-084aa3705015.report.json  convert-08ef8bd29f8a.config.json  convert-08ef8bd29f8a.report.json  convert-0c1fcda22816.config.json  convert-0c1fcda22816.report.json  convert-0ef9d82e8759.config.json  convert-0ef9d82e8759.report.json  convert-0f1543b6d4cf.config.json  convert-0f1543b6d4cf.report.json  convert-0f1fbeec8762.config.json  convert-0f1fbeec8762.report.json  convert-1083401f1eee.config.json  convert-1083401f1eee.report.json  convert-118004d50b4a.config.json  convert-118004d50b4a.report.json  convert-11a98a7f4188.config.json  convert-11a98a7f4188.report.json  convert-122aaad76983.config.json  convert-122aaad76983.report.json  (+571 more)
(+176 files in other folders)
